# liquid-memory

./: .gitignore  Cargo.toml  README.md
examples/image2text/: README.md  main.rs
examples/image_text_embeddings/: README.md  main.rs
examples/text_ingestion/: README.md  main.rs
image_embedding_inference/: Dockerfile  README.md  main.py  pyproject.toml
image_embedding_inference/examples/: request_example.py
src/: lib.rs  utils.rs
src/embeddings/: mod.rs  text_embedding_inference.rs
src/llm/: anthropic.rs  llm_client.rs  mod.rs  openai.rs
src/vectorstore/: ingestion.rs  mod.rs  qdrant_client.rs
